Puppet OpenStack queens m2 release
Change-Id: I2ba67971770fd7c667d097df32f543571dcdd2f7

--- a/deliverables/queens/puppet-aodh.yaml
+++ b/deliverables/queens/puppet-aodh.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 8e87d862bf67184011e39c9bc9b5d8eb0d8b0982
         repo: openstack/puppet-aodh
     version: 12.0.0
+  - projects:
+      - hash: 411952f7fb3f7473c1bb171fa34af9813e38d18a
+        repo: openstack/puppet-aodh
+    version: 12.1.0
