--- a/deliverables/queens/puppet-barbican.yaml
+++ b/deliverables/queens/puppet-barbican.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 67592c907e04c93fe804471c1155fe4c30f72168
         repo: openstack/puppet-barbican
     version: 12.0.0
+  - projects:
+      - hash: 582058497bb029e820c8069f51d54e5ad5921a1c
+        repo: openstack/puppet-barbican
+    version: 12.1.0
