--- a/deliverables/queens/puppet-ceilometer.yaml
+++ b/deliverables/queens/puppet-ceilometer.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 2548dbd378d81932fc0e93407d18eeaebbeeee73
         repo: openstack/puppet-ceilometer
     version: 12.1.0
+  - projects:
+      - hash: 87567851772f4510855cf4116a6135dc159981ff
+        repo: openstack/puppet-ceilometer
+    version: 12.2.0
