--- a/deliverables/queens/puppet-cinder.yaml
+++ b/deliverables/queens/puppet-cinder.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: eb5ad47d5ac3682d43511d60a181f702273a9ba0
         repo: openstack/puppet-cinder
     version: 12.0.0
+  - projects:
+      - hash: cc8389b453086badf64474ada200cf9088512b0c
+        repo: openstack/puppet-cinder
+    version: 12.1.0
