--- a/deliverables/queens/puppet-congress.yaml
+++ b/deliverables/queens/puppet-congress.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 80af639fb30d2adf8d11469f573cf486224d4787
         repo: openstack/puppet-congress
     version: 12.0.0
+  - projects:
+      - hash: 460dadee73d8d0b5a8684d6468670e734d71cd38
+        repo: openstack/puppet-congress
+    version: 12.1.0
