--- a/deliverables/queens/puppet-designate.yaml
+++ b/deliverables/queens/puppet-designate.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 606d3830b4f2f4c2ddae9c75ec361508a53533b2
         repo: openstack/puppet-designate
     version: 12.0.0
+  - projects:
+      - hash: 413599748de206e18c2951d9a0dacacb0dee669b
+        repo: openstack/puppet-designate
+    version: 12.1.0
