--- a/deliverables/queens/puppet-glance.yaml
+++ b/deliverables/queens/puppet-glance.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: fc1a4bc954e03a072ed92c10fb094749f667ff6d
         repo: openstack/puppet-glance
     version: 12.1.0
+  - projects:
+      - hash: 9d5c6a43ee1d8c8cd08fc2f21c7276e4a4172bef
+        repo: openstack/puppet-glance
+    version: 12.2.0
