--- a/deliverables/queens/puppet-heat.yaml
+++ b/deliverables/queens/puppet-heat.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 47a56135af8a1ec293433d372f9aeec0f9d2a246
         repo: openstack/puppet-heat
     version: 12.0.0
+  - projects:
+      - hash: e0843d6dd99de7e77f20e4893c25da77e344a092
+        repo: openstack/puppet-heat
+    version: 12.1.0
