--- a/deliverables/queens/puppet-horizon.yaml
+++ b/deliverables/queens/puppet-horizon.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 739a7f9014e979e40e8d582c483e514d2df383c2
         repo: openstack/puppet-horizon
     version: 12.0.0
+  - projects:
+      - hash: 01a1e93ef17a3b30e1d5dd086f7b858b50e79a64
+        repo: openstack/puppet-horizon
+    version: 12.1.0
