--- a/deliverables/queens/puppet-ironic.yaml
+++ b/deliverables/queens/puppet-ironic.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: f4cf0aa7b6dec9694bbaba2c79522e0c521b391d
         repo: openstack/puppet-ironic
     version: 12.0.0
+  - projects:
+      - hash: e4fcf84bdfd4f1b675aa85e30e88a37eb11bf4aa
+        repo: openstack/puppet-ironic
+    version: 12.1.0
