--- a/deliverables/queens/puppet-keystone.yaml
+++ b/deliverables/queens/puppet-keystone.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 069edd02f0237968040381625cb69c9eaa33395b
         repo: openstack/puppet-keystone
     version: 12.0.0
+  - projects:
+      - hash: f2c86051e35370541a779069f3921e0c15927eb5
+        repo: openstack/puppet-keystone
+    version: 12.1.0
