--- a/deliverables/queens/puppet-magnum.yaml
+++ b/deliverables/queens/puppet-magnum.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: 1c2813918b81bf372c065a85ecf27afce0111db8
         repo: openstack/puppet-magnum
     version: 12.0.2
+  - projects:
+      - hash: 9aab223097ce2ddf76611fc96e82f5897fc7c8e0
+        repo: openstack/puppet-magnum
+    version: 12.1.0
