--- a/deliverables/queens/puppet-manila.yaml
+++ b/deliverables/queens/puppet-manila.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 1eb6daa91278abf3841514676ab87168c61c758b
         repo: openstack/puppet-manila
     version: 12.0.0
+  - projects:
+      - hash: 518085dc1acbbad8150b3e0d9f284821e3ab211d
+        repo: openstack/puppet-manila
+    version: 12.1.0
