--- a/deliverables/queens/puppet-mistral.yaml
+++ b/deliverables/queens/puppet-mistral.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 1e60b1e1c17dd27621cf12f95a1315691de0e5c8
         repo: openstack/puppet-mistral
     version: 12.0.0
+  - projects:
+      - hash: fa73c46e7cd9a939f23e916cd69757a0c18d601c
+        repo: openstack/puppet-mistral
+    version: 12.1.0
