--- a/deliverables/queens/puppet-murano.yaml
+++ b/deliverables/queens/puppet-murano.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 9f05b278ae19bb1de5b98859e916cace95ac36fe
         repo: openstack/puppet-murano
     version: 12.0.0
+  - projects:
+      - hash: f8c461d2f3cc3be18e69715fd4a3c1be83c45f7b
+        repo: openstack/puppet-murano
+    version: 12.1.0
