--- a/deliverables/queens/puppet-neutron.yaml
+++ b/deliverables/queens/puppet-neutron.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 74a47c4b2e05faa0b57330d8be4ac4fdd0bb83d1
         repo: openstack/puppet-neutron
     version: 12.0.0
+  - projects:
+      - hash: 87bc06b224705e527d695830d7bf9f0cf98182cb
+        repo: openstack/puppet-neutron
+    version: 12.1.0
