--- a/deliverables/queens/puppet-nova.yaml
+++ b/deliverables/queens/puppet-nova.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 187084d5e9c018aa52bce994fe447a968d56b7de
         repo: openstack/puppet-nova
     version: 12.0.0
+  - projects:
+      - hash: 9606525df2e38224a6d88f6d014284d5496547d6
+        repo: openstack/puppet-nova
+    version: 12.1.0
