--- a/deliverables/queens/puppet-octavia.yaml
+++ b/deliverables/queens/puppet-octavia.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 1dd9d73fd8780de84c9a20ccb345121f7c33c1d4
         repo: openstack/puppet-octavia
     version: 12.0.0
+  - projects:
+      - hash: f6c2841c458ad8c88d6e3eba21c560c1688cf9d4
+        repo: openstack/puppet-octavia
+    version: 12.1.0
