--- a/deliverables/queens/puppet-openstack_extras.yaml
+++ b/deliverables/queens/puppet-openstack_extras.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 755b1caae572c45206799bf5fda92baa6225cd1a
         repo: openstack/puppet-openstack_extras
     version: 12.0.0
+  - projects:
+      - hash: c8ca70469ea5fd3ada9e69e47bf4f7ffd77b91e4
+        repo: openstack/puppet-openstack_extras
+    version: 12.1.0
