--- a/deliverables/queens/puppet-openstacklib.yaml
+++ b/deliverables/queens/puppet-openstacklib.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 2145140bedbe8951ea0cc2843802203770d98660
         repo: openstack/puppet-openstacklib
     version: 12.0.0
+  - projects:
+      - hash: 5e009d5b885097a0b74fe131c88fab3ad00a9671
+        repo: openstack/puppet-openstacklib
+    version: 12.1.0
