--- a/deliverables/queens/puppet-oslo.yaml
+++ b/deliverables/queens/puppet-oslo.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 695c050b61a51fc06986d3443cfbb1a487f63010
         repo: openstack/puppet-oslo
     version: 12.0.0
+  - projects:
+      - hash: 8e94c4fc2e97d071330fbf385ae38e9be7067ca7
+        repo: openstack/puppet-oslo
+    version: 12.1.0
