--- a/deliverables/queens/puppet-ovn.yaml
+++ b/deliverables/queens/puppet-ovn.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: dccaec0b98f24558fcc63896b347f9d14a6afae3
         repo: openstack/puppet-ovn
     version: 12.0.0
+  - projects:
+      - hash: 7bc471705ce63bf8e22d95259480a29097d4dfe9
+        repo: openstack/puppet-ovn
+    version: 12.1.0
