--- a/deliverables/queens/puppet-panko.yaml
+++ b/deliverables/queens/puppet-panko.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 42d38686b95da19874edfdcc1d2b80183d0a6cd5
         repo: openstack/puppet-panko
     version: 12.0.0
+  - projects:
+      - hash: e874b8889e482f4cc51f5ec22c29df70d6ba6480
+        repo: openstack/puppet-panko
+    version: 12.1.0
