--- a/deliverables/queens/puppet-swift.yaml
+++ b/deliverables/queens/puppet-swift.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: ce7c8d00718cf4150b36ddfe59b245d10be1d69d
         repo: openstack/puppet-swift
     version: 12.0.1
+  - projects:
+      - hash: 677622dc6da860a15666cbdc1f2847f145877b7c
+        repo: openstack/puppet-swift
+    version: 12.1.0
