--- a/deliverables/queens/puppet-tacker.yaml
+++ b/deliverables/queens/puppet-tacker.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: cb2cbc6177a63ebdf0612945064b4a7cdaad93a8
         repo: openstack/puppet-tacker
     version: 12.0.0
+  - projects:
+      - hash: 01ceeb15263a1d1a2a318e09a3acee999a9e5fa3
+        repo: openstack/puppet-tacker
+    version: 12.1.0
