--- a/deliverables/queens/puppet-tempest.yaml
+++ b/deliverables/queens/puppet-tempest.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 90ad1a7e44945c37d5dbd06ea94e497c63600ff6
         repo: openstack/puppet-tempest
     version: 12.0.0
+  - projects:
+      - hash: f65101fc22f6553a894df0a6f584264df8396b1a
+        repo: openstack/puppet-tempest
+    version: 12.1.0
