--- a/deliverables/queens/puppet-trove.yaml
+++ b/deliverables/queens/puppet-trove.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 11513c0a792e841d65874d8fcbb58439e868f435
         repo: openstack/puppet-trove
     version: 12.0.0
+  - projects:
+      - hash: 29efec8d1dab335347b849c92b568b91c2eab5e5
+        repo: openstack/puppet-trove
+    version: 12.1.0
