--- a/deliverables/queens/puppet-vswitch.yaml
+++ b/deliverables/queens/puppet-vswitch.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: c391190d4a30f1a9d38d077e6f5117c6524e1928
         repo: openstack/puppet-vswitch
     version: 8.0.0
+  - projects:
+      - hash: f3b7c9d2f0b4bf9dcf26e13ea2ef4fe32e348eb5
+        repo: openstack/puppet-vswitch
+    version: 8.1.0
