--- a/deliverables/queens/puppet-watcher.yaml
+++ b/deliverables/queens/puppet-watcher.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: dbd519cb3f67287033c061ab28002d0feb70a8d2
         repo: openstack/puppet-watcher
     version: 12.0.0
+  - projects:
+      - hash: e1862cd3bb4ff3461bd61b9424f5caee033c258c
+        repo: openstack/puppet-watcher
+    version: 12.1.0
