--- a/deliverables/queens/puppet-zaqar.yaml
+++ b/deliverables/queens/puppet-zaqar.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: c9ab343df0270071857bb5c77bcda57ae2c02d49
         repo: openstack/puppet-zaqar
     version: 12.0.0
+  - projects:
+      - hash: 326f473a20edd056d4bffa597c2e8d649db2b827
+        repo: openstack/puppet-zaqar
+    version: 12.1.0
