--- a/deliverables/queens/puppet-ec2api.yaml
+++ b/deliverables/queens/puppet-ec2api.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: e795ab9db8d87b0b2168315ff665de06cceaf40a
         repo: openstack/puppet-ec2api
     version: 12.0.0
+  - projects:
+      - hash: 9bf77438df5a5fb15b0ef844873f5c0294a4c69c
+        repo: openstack/puppet-ec2api
+    version: 12.1.0
