--- a/deliverables/queens/puppet-gnocchi.yaml
+++ b/deliverables/queens/puppet-gnocchi.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: ad9848d20f04e514ac7447a40b5e44d1794acea5
         repo: openstack/puppet-gnocchi
     version: 12.0.1
+  - projects:
+      - hash: 274b8f39acb23c5aa8b49684f405d8ae385de111
+        repo: openstack/puppet-gnocchi
+    version: 12.1.0
