--- a/deliverables/queens/puppet-sahara.yaml
+++ b/deliverables/queens/puppet-sahara.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: a5748fbf9829f9d5c5d2a3128f15d8720c6fb30d
         repo: openstack/puppet-sahara
     version: 12.0.0
+  - projects:
+      - hash: 2136d15f6e51365915af05668a8a6511d138ad6b
+        repo: openstack/puppet-sahara
+    version: 12.1.0
