--- a/deliverables/queens/puppet-vitrage.yaml
+++ b/deliverables/queens/puppet-vitrage.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 5024eddb1f6c722c118a5f635e5adf7200f3e725
         repo: openstack/puppet-vitrage
     version: 2.0.0
+  - projects:
+      - hash: 3d1a86ee4f8d7f351044056868d3e125a3e9935a
+        repo: openstack/puppet-vitrage
+    version: 2.1.0
