--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -33,3 +33,7 @@ releases:
       - hash: 670f32ee5320f76bca7dadddb94f213e71dd3012
         repo: openstack/oslo.policy
     version: 1.31.0
+  - projects:
+      - hash: cc3b1cc673817ef9040351d57c1a650a9f402fae
+        repo: openstack/oslo.policy
+    version: 1.32.0
