--- a/deliverables/queens/python-karborclient.yaml
+++ b/deliverables/queens/python-karborclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-karborclient
 release-model: cycle-with-intermediary
 team: karbor
 type: library
+releases:
+  - projects:
+      - hash: a4cec6cb18418a5e1d5508aa627f919f6a08ab11
+        repo: openstack/python-karborclient
+    version: 0.7.0
