--- a/deliverables/_independent/monasca-grafana-datasource.yaml
+++ b/deliverables/_independent/monasca-grafana-datasource.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: d17911fabdd43d783133a480e91843b5f0656480
         repo: openstack/monasca-grafana-datasource
     version: 1.1.0
+  - projects:
+      - hash: 286ffd7dca3e75935471af64f913ac6892485126
+        repo: openstack/monasca-grafana-datasource
+    version: 1.2.0
