Freezer Queens-2 milestone
  * Release Freezer
  * Release Freezer-api
  * Release Freezer-dr
  * Release Freezer-web-ui
  * Release python-freezerclient

Change-Id: I8105d3245529740319a9d5a6b2f68e8ecc2b3dce

--- a/deliverables/queens/freezer-web-ui.yaml
+++ b/deliverables/queens/freezer-web-ui.yaml
@@ -3,3 +3,8 @@ launchpad: freezer
 release-model: cycle-with-milestones
 team: freezer
 type: horizon-plugin
+releases:
+  - version: 6.0.0.0b2
+    projects:
+      - repo: openstack/freezer-web-ui
+        hash: ea53eea02319f12904a84fa379f088cab68608d1
