Tag monasca-common and monasca-agent
Bump the version for monasca common and monasca-agent
because we need changes in monasca-common and monasca-agent
is using monasca-common for validation.

Change-Id: Ifc1524f2a80490e45e86a887c46f4bdb1b021167

--- a/deliverables/queens/monasca-agent.yaml
+++ b/deliverables/queens/monasca-agent.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: f3410a4475d0ef29168e9f366a204619a5e0d220
         repo: openstack/monasca-agent
     version: 2.3.0
+  - projects:
+      - hash: 8ac0f834adbf740f72de70650c3c53921a64bb7f
+        repo: openstack/monasca-agent
+    version: 2.4.0
