--- a/deliverables/queens/monasca-common.yaml
+++ b/deliverables/queens/monasca-common.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 94e0a059b562508d6ddd3f91fa0bbbdb51b3a375
         repo: openstack/monasca-common
     version: 2.4.0
+  - projects:
+      - hash: 9258e7efc2d8526a9450c3d2d858e6fcdfa8a56b
+        repo: openstack/monasca-common
+    version: 2.5.0
