senlin release milestone Q2
this patch is Q2 release for senlin
and the release for python-senlinclient

Change-Id: I8c8abbf1edc1585028d35ee32e23a7138b4b1bf6

--- a/deliverables/queens/python-senlinclient.yaml
+++ b/deliverables/queens/python-senlinclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-senlinclient
 release-model: cycle-with-intermediary
 team: senlin
 type: library
+releases:
+  - version: 1.5.0
+    projects:
+      - repo: openstack/python-senlinclient
+        hash: 703f41ad5bb4d201401f2455e3370b3b568f7c75
