--- a/deliverables/queens/tricircle.yaml
+++ b/deliverables/queens/tricircle.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/tricircle
         hash: 2b164d8dff504ad09e405db9407863daafcd9d7f
+  - version: 4.2.0
+    projects:
+      - repo: openstack/tricircle
+        hash: 141a89c682838b4f2bc38f58626f3b9e10b19798
