log yamllint output to its own file
Adjust the tox log wrapper so it works with the full path to the
script for running yamllint, then add it to the step for running
yamllint so the results are logged to a separate file.

Change-Id: I98561e17e4fa76aeee9adfd57d9e71a7f229e536
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ commands =
 deps =
     yamllint==1.4.1
 commands =
-    {toxinidir}/tools/run_yamllint.sh
+    {toxinidir}/tools/tox-log-command.sh {toxinidir}/tools/run_yamllint.sh
     {toxinidir}/tools/tox-log-command.sh validate-request {posargs}
 
 [testenv:list-changes]
