--- a/deliverables/queens/horizon.yaml
+++ b/deliverables/queens/horizon.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 4927f5fae4ec5e9688ff5c8de37bded46d06edcd
+  - version: 13.0.0.0b2
+    projects:
+      - repo: openstack/horizon
+        hash: ffd011441df3317404e48c4c435f448565abd513
