--- a/deliverables/queens/cinder.yaml
+++ b/deliverables/queens/cinder.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - hash: 6f5c4c2b682561df07753c9381d0340b29468001
         repo: openstack/cinder
+  - projects:
+      - hash: 61962d2522fb778d0bc2e0f511a541579e7b2f89
+        repo: openstack/cinder
+    version: 12.0.0.0b2
