--- a/deliverables/queens/neutron-lbaas-dashboard.yaml
+++ b/deliverables/queens/neutron-lbaas-dashboard.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/neutron-lbaas-dashboard
         hash: 6895af770777c110ce165b86f820d5e4b1afe613
+  - version: 4.0.0.0b2
+    projects:
+      - repo: openstack/neutron-lbaas-dashboard
+        hash: ef650294bcc7447d441e6a710c39d64e384e1b27
