--- a/deliverables/queens/neutron-lbaas.yaml
+++ b/deliverables/queens/neutron-lbaas.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/neutron-lbaas
         hash: 8ee7dd2da7c3d8db588ec03b4ee0df25a7b906a9
+  - version: 12.0.0.0b2
+    projects:
+      - repo: openstack/neutron-lbaas
+        hash: 0c76484a5055f2c7f7414156e15debd32b91822a
