--- a/deliverables/queens/octavia-dashboard.yaml
+++ b/deliverables/queens/octavia-dashboard.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/octavia-dashboard
         hash: 0d6688e423bc50322661a2704d2a3cdaf1673658
+  - version: 1.0.0.0b2
+    projects:
+      - repo: openstack/octavia-dashboard
+        hash: baae43b65dc368edaafb1579c7fefbb93d40db8f
