--- a/deliverables/queens/octavia.yaml
+++ b/deliverables/queens/octavia.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/octavia
         hash: 1b84076ee61f719fec5b2c7c3d4d2cd36469ea82
+  - version: 2.0.0.0b2
+    projects:
+      - repo: openstack/octavia
+        hash: 82d9f44c620cf8a5d4a144bcd3540c538fb8a8de
