--- a/deliverables/queens/python-octaviaclient.yaml
+++ b/deliverables/queens/python-octaviaclient.yaml
@@ -4,3 +4,8 @@ storyboard: 911
 release-model: cycle-with-intermediary
 team: octavia
 type: library
+releases:
+  - version: 1.3.0
+    projects:
+      - repo: openstack/python-octaviaclient
+        hash: 922edce32a18a21ac48c00bcbea184b04e54749f
