--- a/deliverables/queens/congress.yaml
+++ b/deliverables/queens/congress.yaml
@@ -10,3 +10,7 @@ releases:
         hash: a729a0926dcf3d5fcb8ee5640ea0bb5dec85e1a7
     highlights: |-
       - Neutron QoS extension driver added.
+  - version: 7.0.0.0b2
+    projects:
+      - repo: openstack/congress
+        hash: 4043745bd48736f9705a0e8b764a1bbe4186793e
