request congress client release
Change-Id: I0c8afe6e28f941177f532f2b5b963a759976e7a3

--- a/deliverables/queens/python-congressclient.yaml
+++ b/deliverables/queens/python-congressclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-congressclient
 release-model: cycle-with-intermediary
 team: congress
 type: library
+releases:
+  - version: 1.9.0
+    projects:
+      - repo: openstack/python-congressclient
+        hash: a8ec6c85255b94e997ce42fe60afed51e0517882
