--- a/deliverables/queens/kolla.yaml
+++ b/deliverables/queens/kolla.yaml
@@ -3,3 +3,8 @@ launchpad: kolla
 release-model: cycle-trailing
 team: kolla
 type: other
+releases:
+  - version: 6.0.0.0b2
+    projects:
+      - repo: openstack/kolla
+        hash: a0b15e40bbd3bcd70e5bf16958d48271b96381aa
