--- a/deliverables/queens/heat.yaml
+++ b/deliverables/queens/heat.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 1f73478e3280ab35ad433695a774a5ba64aa2b9b
+  - version: 10.0.0.0b2
+    projects:
+      - repo: openstack/heat
+        hash: dc25b6911f3f64c296794d285ced01b15be33e36
