--- a/deliverables/pike/heat.yaml
+++ b/deliverables/pike/heat.yaml
@@ -37,3 +37,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: be1e2e9fa5b44fb186d1705e0fefff4b8eec2233
+  - version: 9.0.2
+    projects:
+      - repo: openstack/heat
+        hash: ed3eb9fe823e193e850e170405eecbc1411667f6
