--- a/deliverables/ocata/heat.yaml
+++ b/deliverables/ocata/heat.yaml
@@ -53,3 +53,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: e671d93b1508650d1da3587f96a2f8561825e24c
+  - version: 8.0.6
+    projects:
+      - repo: openstack/heat
+        hash: 76da5a4a2fb0f7315d1d8a3d003f6ab0e4de0c07
