--- a/deliverables/queens/python-heatclient.yaml
+++ b/deliverables/queens/python-heatclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: 868f3b80b7c701607b644afd19e320a9f35e0cfc
+  - version: 1.13.0
+    projects:
+      - repo: openstack/python-heatclient
+        hash: fbff3c60b78b5cbfea682f8a9206a83db46ee2a3
