--- a/deliverables/queens/heat-agents.yaml
+++ b/deliverables/queens/heat-agents.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/heat-agents
         hash: 9dad9eefd75954cd21460d54da99452cd2dd578f
+  - version: 1.5.1
+    projects:
+      - repo: openstack/heat-agents
+        hash: 756fcafdf025351ea862ae57f29b8eff9beee362
