--- a/deliverables/queens/glance.yaml
+++ b/deliverables/queens/glance.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 4731910f94d123129516741cca30d4a550028db1
+  - version: 16.0.0.0b2
+    projects:
+      - repo: openstack/glance
+        hash: d8bcf8ba13a05f9dcd395ac2064c9099c759147a
