Neutron Queens Milestone 2
Change-Id: I5b7c851b6b6660a5a7b1b9cbf58392aec4afeb71

--- a/deliverables/queens/networking-bagpipe.yaml
+++ b/deliverables/queens/networking-bagpipe.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: d94693f181f83c18d0c84af02a4787575dcfecc9
         repo: openstack/networking-bagpipe
     version: 8.0.0.0b1
+  - projects:
+      - hash: 8d2c1dc245f064dad911ad551256c343489e7679
+        repo: openstack/networking-bagpipe
+    version: 8.0.0.0b2
