--- a/deliverables/queens/networking-bgpvpn.yaml
+++ b/deliverables/queens/networking-bgpvpn.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 546d5b46a0499ad4a39da946c3302f3deb6871e2
         repo: openstack/networking-bgpvpn
     version: 8.0.0.0b1
+  - projects:
+      - hash: ea4f9d118d8c200a76aad14a6e376e944e3fe46a
+        repo: openstack/networking-bgpvpn
+    version: 8.0.0.0b2
