--- a/deliverables/queens/networking-odl.yaml
+++ b/deliverables/queens/networking-odl.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 180440ff9d8c4e7c5b1ef4bdf0c5868e34fabcc6
         repo: openstack/networking-odl
     version: 12.0.0.0b1
+  - projects:
+      - hash: 4fd722139446f0cc2cbfb784da66aa146b32f169
+        repo: openstack/networking-odl
+    version: 12.0.0.0b2
