--- a/deliverables/queens/networking-ovn.yaml
+++ b/deliverables/queens/networking-ovn.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: cfa54af57e6c39f5296d444e5afa2c591956f6da
         repo: openstack/networking-ovn
     version: 4.0.0.0b1
+  - projects:
+      - hash: 746cae0aaa9e7a03c416a4e237afc1203a8ee96f
+        repo: openstack/networking-ovn
+    version: 4.0.0.0b2
