--- a/deliverables/queens/networking-sfc.yaml
+++ b/deliverables/queens/networking-sfc.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 580faa9bf1a01fd62cb9d0fe4a1c9fd0c40b50b1
         repo: openstack/networking-sfc
     version: 6.0.0.0b1
+  - projects:
+      - hash: 06536b65f8277fe3955f2a94809514f695bd6855
+        repo: openstack/networking-sfc
+    version: 6.0.0.0b2
