--- a/deliverables/queens/networking-midonet.yaml
+++ b/deliverables/queens/networking-midonet.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 59445dfe7c988bf0ccba9e4343397d298449a0b3
         repo: openstack/networking-midonet
     version: 6.0.0.0b1
+  - projects:
+      - hash: b9a9c1334fe9cd3d65d822792583d88a6dc32121
+        repo: openstack/networking-midonet
+    version: 6.0.0.0b2
