--- a/deliverables/queens/neutron-fwaas.yaml
+++ b/deliverables/queens/neutron-fwaas.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 073622b9df508cfb54fade4073c5243001b61a51
         repo: openstack/neutron-fwaas
     version: 12.0.0.0b1
+  - projects:
+      - hash: cef88d227d576018d805b084428a612ec458c004
+        repo: openstack/neutron-fwaas
+    version: 12.0.0.0b2
