--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: e86dfc927209185c7f08be5b31c264b869f7cc59
         repo: openstack/neutron
     version: 12.0.0.0b1
+  - projects:
+      - hash: a62a6002b3ee5334dd7608ba65a5cee23b524004
+        repo: openstack/neutron
+    version: 12.0.0.0b2
