--- a/deliverables/queens/manila-ui.yaml
+++ b/deliverables/queens/manila-ui.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/manila-ui
         hash: b844e49872ec48ac862d0efcc00ae6b5f4b5aff3
+  - version: 2.12.0
+    projects:
+      - repo: openstack/manila-ui
+        hash: 0102041340e83ad71ac02ae367e3d130a06cca86
