--- a/deliverables/queens/python-manilaclient.yaml
+++ b/deliverables/queens/python-manilaclient.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 63b5a4dedfde0a64c75fd4dad4a1da6a775effdf
         repo: openstack/python-manilaclient
     version: 1.18.0
+  - projects:
+      - hash: d4c581de4f6e9768b05600ec57991d9abbda7fa7
+        repo: openstack/python-manilaclient
+    version: 1.19.0
