--- a/deliverables/queens/manila.yaml
+++ b/deliverables/queens/manila.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/manila
         hash: cd77c128b0bf9f0f9b64a4084ff85b8799be799b
+  - version: 6.0.0.0b2
+    projects:
+      - repo: openstack/manila
+        hash: 128460ff83c213219711c4afc284993e105012b5
