--- a/deliverables/queens/nova.yaml
+++ b/deliverables/queens/nova.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: af4703cb38580a8cb9c9b293dd4b1637f2734cad
+  - version: 17.0.0.0b2
+    projects:
+      - repo: openstack/nova
+        hash: 81544829d14aebaaa717ffbe6ec33c67a2f11b7f
