--- a/deliverables/queens/keystone.yaml
+++ b/deliverables/queens/keystone.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: 8e61136effa09cc736536ee272e8b24eff348b8f
+  - version: 13.0.0.0b2
+    projects:
+      - repo: openstack/keystone
+        hash: 41cd37b494bf29cc2045d17061ad846b3a18eb78
