--- a/deliverables/queens/keystonemiddleware.yaml
+++ b/deliverables/queens/keystonemiddleware.yaml
@@ -7,5 +7,9 @@ releases:
       - hash: 452099f4eb90400cd23ba1b113fcefc98b440c20
         repo: openstack/keystonemiddleware
     version: 4.18.0
+  - projects:
+      - hash: db21ecd2b55578f9fecae29f9b1334ca5d60e28b
+        repo: openstack/keystonemiddleware
+    version: 4.19.0
 team: keystone
 type: library
