--- a/deliverables/queens/sahara-dashboard.yaml
+++ b/deliverables/queens/sahara-dashboard.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/sahara-dashboard
         hash: 6513bf0925f7b31f49b618350690296d24f5c4a6
+  - version: 8.0.0.0b2
+    projects:
+      - repo: openstack/sahara-dashboard
+        hash: 5ae904c28cc5269cfb18001efad1f6fb4060f29b
