--- a/deliverables/queens/sahara-image-elements.yaml
+++ b/deliverables/queens/sahara-image-elements.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/sahara-image-elements
         hash: f3f5613238a58a43281c917a49ca23eae65db16e
+  - version: 8.0.0.0b2
+    projects:
+      - repo: openstack/sahara-image-elements
+        hash: 7880bf12fdd4b5e52697a9c72a6844da60a7e3e1
