--- a/deliverables/queens/sahara.yaml
+++ b/deliverables/queens/sahara.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/sahara
         hash: 136d0a39e5d8fc6730352fdf52b956cfccd65191
+  - version: 8.0.0.0b2
+    projects:
+      - repo: openstack/sahara
+        hash: 32d4c744f7dcdb2ddd7bd74669098c320a9d294f
