--- a/deliverables/queens/watcher.yaml
+++ b/deliverables/queens/watcher.yaml
@@ -9,3 +9,8 @@ releases:
       - repo: openstack/watcher
         hash: 84fb7423f115ee293071313729a9cdf4d2ed7f75
         tarball-base: python-watcher
+  - version: 1.6.0
+    projects:
+      - repo: openstack/watcher
+        hash: c2e16bfa9630b374ccca8ea88493a166dfa5f1a9
+        tarball-base: python-watcher
