--- a/deliverables/queens/python-watcherclient.yaml
+++ b/deliverables/queens/python-watcherclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-watcherclient
         hash: 0fd1b11f6d9ccc108608297e6dfb28c846152a73
+  - version: 1.5.0
+    projects:
+      - repo: openstack/python-watcherclient
+        hash: abd6d8a0cb4a7d59b4d1cce39d63804600929d97
