--- a/deliverables/queens/watcher-dashboard.yaml
+++ b/deliverables/queens/watcher-dashboard.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/watcher-dashboard
         hash: e0ef3f01c213341e128b1dea05947561882f88f0
+  - version: 1.6.0
+    projects:
+      - repo: openstack/watcher-dashboard
+        hash: e44c43b6175ca0eaaad8115d0efd96fce09afac6
