--- a/deliverables/queens/storlets.yaml
+++ b/deliverables/queens/storlets.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/storlets
         hash: 02857e440db09a6cd0457e122acc4e197f7a5ae0
+  - version: 0.7.0
+    projects:
+      - repo: openstack/storlets
+        hash: d02fb0b7a641657ead41eb676a1478d9005a9f9e
