--- a/deliverables/queens/barbican.yaml
+++ b/deliverables/queens/barbican.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: ccc6843967cf783cfc3d7998b8a19512920b9944
         repo: openstack/barbican
     version: 6.0.0.0b1
+  - projects:
+      - hash: 21deca8a4ba0444270ca1cb7c692a35012923ae7
+        repo: openstack/barbican
+    version: 6.0.0.0b2
