--- a/deliverables/queens/python-neutronclient.yaml
+++ b/deliverables/queens/python-neutronclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-neutronclient
 release-model: cycle-with-intermediary
 team: neutron
 type: library
+releases:
+  - projects:
+      - hash: 50b5b29b1acf5c60a6e4f9cf33ec482336a0e68b
+        repo: openstack/python-neutronclient
+    version: 6.6.0
