Releae TripleO stable branches
Newton, Ocata and Pike bi-weekly releases.

Change-Id: I29cc65bbade812f55e29fef70f88e7c370425e2d

--- a/deliverables/newton/python-tripleoclient.yaml
+++ b/deliverables/newton/python-tripleoclient.yaml
@@ -50,5 +50,9 @@ releases:
       - hash: b302b2731564d9c4d97577ff80489962a5678dae
         repo: openstack/python-tripleoclient
     version: 5.4.4
+  - projects:
+      - hash: 24e74fc7fe8e3e6d496184a0b18a63d5fbc4f9c0
+        repo: openstack/python-tripleoclient
+    version: 5.4.5
 team: tripleo
 type: library
