--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -50,5 +50,9 @@ releases:
       - hash: 42583cb7a33c1db3529db0cd8c0608609c66af7c
         repo: openstack/puppet-tripleo
     version: 6.5.5
+  - projects:
+      - hash: 1073cca81549989577e0e7b7f4be11c0d95e2590
+        repo: openstack/puppet-tripleo
+    version: 6.5.6
 team: tripleo
 type: other
