--- a/deliverables/ocata/python-tripleoclient.yaml
+++ b/deliverables/ocata/python-tripleoclient.yaml
@@ -39,5 +39,9 @@ releases:
       - hash: da5483ad5c61d8444a3c2380634c7d765bf66adb
         repo: openstack/python-tripleoclient
     version: 6.2.2
+  - projects:
+      - hash: 62ab20310ec52812249590ab1a3064fabf7bb00a
+        repo: openstack/python-tripleoclient
+    version: 6.2.3
 team: tripleo
 type: library
