--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -60,5 +60,9 @@ releases:
       - hash: aaf911fade780eb96dd02e696188a447c85e22d6
         repo: openstack/tripleo-heat-templates
     version: 6.2.6
+  - projects:
+      - hash: 62256b2f6b39396c24de992d325d8f87deb37a89
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.7
 team: tripleo
 type: other
