--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -50,5 +50,9 @@ releases:
       - hash: 1e0dd6786e3a4326a37e47541844657524e689a9
         repo: openstack/instack-undercloud
     version: 7.4.5
+  - projects:
+      - hash: 0191cd4933e2e7a514a931675fe7ae6fc0bf7e4f
+        repo: openstack/instack-undercloud
+    version: 7.4.6
 team: tripleo
 type: other
