--- a/deliverables/pike/os-apply-config.yaml
+++ b/deliverables/pike/os-apply-config.yaml
@@ -26,5 +26,9 @@ releases:
       - hash: 294cd491b585dcdeb199d3d8c3fc0160707ccefe
         repo: openstack/os-apply-config
     version: 7.2.1
+  - projects:
+      - hash: b70958677a775fb4e0c9fa1c22bdfe29e70aabd3
+        repo: openstack/os-apply-config
+    version: 7.2.2
 team: tripleo
 type: other
