--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -45,5 +45,9 @@ releases:
       - hash: 3633eeecacfdb58c5d5b8bd3150f70b1873c3102
         repo: openstack/puppet-tripleo
     version: 7.4.5
+  - projects:
+      - hash: d36324f74c4db5ffe3cc4620936f014742011bee
+        repo: openstack/puppet-tripleo
+    version: 7.4.6
 team: tripleo
 type: other
