--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -42,6 +42,10 @@ releases:
       - hash: 2539361403ccc98344631d8bae2a3abcc990ed7a
         repo: openstack/python-tripleoclient
     version: 7.3.5
+  - projects:
+      - hash: d50b19dc9fa4fe2e5a47ac97097e8a6d367ffaef
+        repo: openstack/python-tripleoclient
+    version: 7.3.6
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
