--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -58,5 +58,9 @@ releases:
       - hash: 37f3f455d469e9eba4201a1a07d399273f28faf2
         repo: openstack/tripleo-common
     version: 7.6.5
+  - projects:
+      - hash: aa14cae1443c2979b994c723deacacc60ab432fe
+        repo: openstack/tripleo-common
+    version: 7.6.6
 team: tripleo
 type: other
