--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -51,5 +51,9 @@ releases:
       - hash: 74e40b21f08abd3c6091bf7c3f78b77f136df6d8
         repo: openstack/tripleo-heat-templates
     version: 7.0.5
+  - projects:
+      - hash: 0c569d5a0bf598b3d000157c912536752150874f
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.6
 team: tripleo
 type: other
