--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -39,5 +39,9 @@ releases:
       - hash: f68f717d87fdc74e932098ef361649b054e6439f
         repo: openstack/tripleo-puppet-elements
     version: 7.0.2
+  - projects:
+      - hash: ac65f7f8470718a99ad788cd8473e9cc63a88b32
+        repo: openstack/tripleo-puppet-elements
+    version: 7.0.3
 team: tripleo
 type: other
