--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -46,5 +46,9 @@ releases:
       - hash: f538ae44c0e2eccad63e38acb1b72aeebe45c6ea
         repo: openstack/tripleo-ui
     version: 7.4.5
+  - projects:
+      - hash: 3ba8744b766d5a7290e81dc8dd3dae1e1aac3d6b
+        repo: openstack/tripleo-ui
+    version: 7.4.6
 team: tripleo
 type: other
