--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -71,5 +71,9 @@ releases:
       - hash: bd2c6d516f6997aaa7c4ffa8a31a2fe1accac5d7
         repo: openstack/tripleo-heat-templates
     version: 5.3.6
+  - projects:
+      - hash: ecb34655ede4825ef8dec90373436c9751613096
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.7
 team: tripleo
 type: other
