--- a/deliverables/pike/paunch.yaml
+++ b/deliverables/pike/paunch.yaml
@@ -40,3 +40,7 @@ releases:
       - hash: 4bb695a910995af34f57558afbccfb6e624c1013
         repo: openstack/paunch
     version: 1.5.2
+  - projects:
+      - hash: 79ec2f2a8b9f6d17c0a2af5dbdee96d3f0eaeae4
+        repo: openstack/paunch
+    version: 1.5.3
