--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -38,5 +38,9 @@ releases:
       - hash: bbae079f82db71d248144dd410ccc4c735903549
         repo: openstack/tripleo-validations
     version: 7.4.3
+  - projects:
+      - hash: 3efc52554b8984555826ac0048597a0570d93008
+        repo: openstack/tripleo-validations
+    version: 7.4.4
 team: tripleo
 type: other
