--- a/deliverables/queens/python-cinderclient.yaml
+++ b/deliverables/queens/python-cinderclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-cinderclient
         hash: b372fe69279117e23044367431e4eb136b323c20
+  - projects:
+      - hash: 76fe6fc01d5ded29c65b5fe486fd3c619c01017a
+        repo: openstack/python-cinderclient
+    version: 3.3.0
